--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2@aar')
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2@aar')
             {
                 transitive = true
             }
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.1.1'
+
 }
